--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>the broes.com</title>
 </head>
 <body>
+    <H1>HIIIIIIIIIIIII</H1>
+    <p>oh gosh idk what to say</p>
     <p>uwu hei hei velkommen til min verden.</p>
 </body>
 </html>
